# phaserider

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cli.sh  test.sh  wave.csv
.github/workflows/: build.yml  test.yml
src/: adc.cpp  circuit_phys.cpp  circuit_phys.h  circuit_tick.cpp  circuit_tick.h  logic.cpp  main.cpp  net_tick.cpp  net_tick.h  ode.cpp  parametron_phys.cpp  parametron_phys.h  parametron_phys_adder.cpp  tick.cpp
